--- a/backup/unit1.lfm
+++ b/backup/unit1.lfm
@@ -394,7 +394,7 @@ object Form1: TForm1
           'Kraków'
           'Lublin'
           'Łódź'
-          'Nysa'
+          'Mielno'
           'Opole'
           'Piła'
           'Poznań'
@@ -514,7 +514,7 @@ object Form1: TForm1
           'Kraków'
           'Lublin'
           'Łódź'
-          'Nysa'
+          'Mielno'
           'Opole'
           'Piła'
           'Poznań'
